--- a/index.html
+++ b/index.html
@@ -64,122 +64,21 @@
         }
     </style>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
-    <script>
-        const CLIENT_ID = '812194722245-3cinf55qaia7jlftpuoo9kco7dtetmbf.apps.googleusercontent.com'; // Replace with your client ID
-
-        function handleCredentialResponse(response) {
-            const token = response.credential;
-            localStorage.setItem('google_token', token);
-            document.getElementById('login-button').style.display = 'none';
-            document.getElementById('logout-button').style.display = 'block';
-            document.getElementById('journalForm').style.display = 'block';
-            initializeGapiClient(token);
-        }
-
-        function initializeGapiClient(token) {
-            gapi.load('client', async () => {
-                await gapi.client.init({
-                    clientId: CLIENT_ID,
-                    scope: 'https://www.googleapis.com/auth/drive.file https://www.googleapis.com/auth/spreadsheets',
-                });
-
-                gapi.client.setToken({ 'access_token': token });
-
-                listFiles();
-            });
-        }
-
-        function listFiles() {
-            gapi.client.drive.files.list({
-                'pageSize': 10,
-                'fields': "nextPageToken, files(id, name)"
-            }).then(function(response) {
-                const files = response.result.files;
-                if (files && files.length > 0) {
-                    let output = '<ul>';
-                    files.forEach(file => {
-                        output += `<li>${file.name}</li>`;
-                    });
-                    output += '</ul>';
-                    document.getElementById('content').innerHTML = output;
-                } else {
-                    document.getElementById('content').innerHTML = 'No files found.';
-                }
-            });
-        }
-
-        function handleSignoutClick() {
-            localStorage.removeItem('google_token');
-            document.getElementById('login-button').style.display = 'block';
-            document.getElementById('logout-button').style.display = 'none';
-            document.getElementById('journalForm').style.display = 'none';
-            document.getElementById('content').innerHTML = '';
-        }
-
-        window.onload = function () {
-            google.accounts.id.initialize({
-                client_id: CLIENT_ID,
-                callback: handleCredentialResponse
-            });
-            google.accounts.id.renderButton(
-                document.getElementById('login-button'),
-                { theme: 'outline', size: 'large' }
-            );
-            document.getElementById('logout-button').onclick = handleSignoutClick;
-
-            const token = localStorage.getItem('google_token');
-            if (token) {
-                document.getElementById('login-button').style.display = 'none';
-                document.getElementById('logout-button').style.display = 'block';
-                document.getElementById('journalForm').style.display = 'block';
-                initializeGapiClient(token);
-            }
-        }
-
-        async function submitData() {
-            const formData = {
-                bankroll: document.getElementById('bankroll').value,
-                max_loss: document.getElementById('max_loss').value,
-                take_profit: document.getElementById('take_profit').value,
-                rounds_played: document.getElementById('rounds_played').value,
-                final_bankroll: document.getElementById('final_bankroll').value,
-                strategy: document.getElementById('strategy').value,
-                improvement: document.getElementById('improvement').value,
-                timestamp: new Date().toISOString()
-            };
-
-            try {
-                console.log('Submitting data:', formData);
-                const response = await fetch('https://script.google.com/macros/s/AKfycbz9EEe9XrAVpGSdvRHoTuvsbZ5iOBhSytp_e3hXT4o3OSzgZksViiAUwv3A0F2UyQ4y4Q/exec', {
-                    redirect: 'follow',
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'text/plain;charset=utf-8',
-                    },
-                    body: JSON.stringify(formData)
-                });
-
-                if (response.ok) {
-                    const result = await response.json();
-                    console.log('Response:', result);
-                    document.getElementById('result').innerText = result.message;
-                } else {
-                    console.error('Error response:', response);
-                    document.getElementById('result').innerText = 'Error submitting data.';
-                }
-            } catch (error) {
-                console.error('Error:', error);
-                document.getElementById('result').innerText = 'Error submitting data.';
-            }
-        }
-    </script>
 </head>
 <body>
     <div class="container">
         <h1>FCS Game Journal</h1>
         <div class="button-group">
-            <button id="login-button">Login with Google</button>
-            <button id="logout-button" style="display: none;">Logout</button>
+            <div id="g_id_onload"
+                data-client_id="812194722245-3cinf55qaia7jlftpuoo9kco7dtetmbf.apps.googleusercontent.com"
+                data-context="signin"
+                data-ux_mode="popup"
+                data-callback="handleCredentialResponse"
+                data-auto_select="true"
+                data-itp_support="true">
+            </div>
+            <div class="g_id_signin" data-type="standard"></div>
+            <button id="logout-button" style="display: none;" onclick="handleSignoutClick()">Logout</button>
         </div>
         <form id="journalForm" style="display: none;">
             <label for="bankroll">Initial Bankroll ($):</label>
@@ -208,5 +107,116 @@
         <div id="result"></div>
         <div id="content"></div>
     </div>
+    <script>
+        const CLIENT_ID = '812194722245-3cinf55qaia7jlftpuoo9kco7dtetmbf.apps.googleusercontent.com'; // Replace with your client ID
+
+        function handleCredentialResponse(response) {
+            const token = response.credential;
+            localStorage.setItem('google_token', token);
+            document.getElementById('g_id_onload').style.display = 'none';
+            document.getElementById('logout-button').style.display = 'block';
+            document.getElementById('journalForm').style.display = 'block';
+            initializeGapiClient(token);
+        }
+
+        function initializeGapiClient(token) {
+            gapi.load('client', async () => {
+                await gapi.client.init({
+                    clientId: CLIENT_ID,
+                    scope: 'https://www.googleapis.com/auth/drive.file https://www.googleapis.com/auth/spreadsheets'
+                });
+
+                gapi.client.setToken({ access_token: token });
+
+                listFiles();
+            });
+        }
+
+        function listFiles() {
+            gapi.client.drive.files.list({
+                'pageSize': 10,
+                'fields': "nextPageToken, files(id, name)"
+            }).then(function(response) {
+                const files = response.result.files;
+                if (files && files.length > 0) {
+                    let output = '<ul>';
+                    files.forEach(file => {
+                        output += `<li>${file.name}</li>`;
+                    });
+                    output += '</ul>';
+                    document.getElementById('content').innerHTML = output;
+                } else {
+                    document.getElementById('content').innerHTML = 'No files found.';
+                }
+            }, function(error) {
+                console.log('Error listing files: ', error);
+            });
+        }
+
+        function handleSignoutClick() {
+            google.accounts.id.disableAutoSelect();
+            localStorage.removeItem('google_token');
+            document.getElementById('g_id_onload').style.display = 'block';
+            document.getElementById('logout-button').style.display = 'none';
+            document.getElementById('journalForm').style.display = 'none';
+            document.getElementById('content').innerHTML = '';
+        }
+
+        window.onload = function () {
+            const token = localStorage.getItem('google_token');
+            if (token) {
+                document.getElementById('g_id_onload').style.display = 'none';
+                document.getElementById('logout-button').style.display = 'block';
+                document.getElementById('journalForm').style.display = 'block';
+                initializeGapiClient(token);
+            } else {
+                google.accounts.id.initialize({
+                    client_id: CLIENT_ID,
+                    callback: handleCredentialResponse
+                });
+                google.accounts.id.renderButton(
+                    document.getElementById('g_id_onload'),
+                    { theme: 'outline', size: 'large' }
+                );
+            }
+        }
+
+        async function submitData() {
+            const formData = {
+                bankroll: document.getElementById('bankroll').value,
+                max_loss: document.getElementById('max_loss').value,
+                take_profit: document.getElementById('take_profit').value,
+                rounds_played: document.getElementById('rounds_played').value,
+                final_bankroll: document.getElementById('final_bankroll').value,
+                strategy: document.getElementById('strategy').value,
+                improvement: document.getElementById('improvement').value,
+                timestamp: new Date().toISOString()
+            };
+
+            try {
+                console.log('Submitting data:', formData);
+                const response = await fetch('https://script.google.com/macros/s/AKfycbxncWtu51DyJJgqpg3QQMQwi4XYEHdDgRek5dHP_44-vZIqxFoG7aZWxYjZl04o3R84VQ/exec', {
+                    redirect: 'follow',
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'text/plain;charset=utf-8',
+                    },
+                    body: JSON.stringify(formData)
+                });
+
+                if (response.ok) {
+                    const result = await response.json();
+                    console.log('Response:', result);
+                    document.getElementById('result').innerText = result.message;
+                } else {
+                    console.error('Error response:', response);
+                    document.getElementById('result').innerText = 'Error submitting data.';
+                }
+            } catch (error) {
+                console.error('Error:', error);
+                document.getElementById('result').innerText = 'Error submitting data.';
+            }
+        }
+    </script>
 </body>
 </html>
