--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
         function initializeGapiClient(token) {
             gapi.load('client', async () => {
                 await gapi.client.init({
+                    apiKey: '', // No need for API key
                     clientId: CLIENT_ID,
                     scope: 'https://www.googleapis.com/auth/drive.file https://www.googleapis.com/auth/spreadsheets'
                 });
@@ -195,7 +196,7 @@
 
             try {
                 console.log('Submitting data:', formData);
-                const response = await fetch('https://script.google.com/macros/s/AKfycbyPCBNuc3l63HJPyGVkpwwLtLsBHDbJWvTg4na86MzJ9QXsKYnw8nJeTeusrnnjKc9q5w/exec', {
+                const response = await fetch('https://script.google.com/macros/s/AKfycbzzgS7EX_iSVGFT3XaHwmB_CHNRraW6l4-XFCbSPFJ0bwc6dyydFdtc_dORqwYvdiXhrw/exec', {
                     redirect: 'follow',
                     method: 'POST',
                     headers: {
