--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
         }
     </style>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
-    <script src="https://apis.google.com/js/api.js" async defer onload="gapiLoaded()"></script>
 </head>
 <body>
     <div class="container">
@@ -111,10 +110,6 @@
     <script>
         const CLIENT_ID = '812194722245-3cinf55qaia7jlftpuoo9kco7dtetmbf.apps.googleusercontent.com'; // Replace with your client ID
 
-        function gapiLoaded() {
-            gapi.load('client', initializeGapiClient);
-        }
-
         function handleCredentialResponse(response) {
             const token = response.credential;
             localStorage.setItem('google_token', token);
@@ -124,21 +119,21 @@
             initializeGapiClient(token);
         }
 
-        function initializeGapiClient(token) {
-            gapi.client.init({
+        async function initializeGapiClient(token) {
+            await gapi.client.init({
                 clientId: CLIENT_ID,
                 scope: 'https://www.googleapis.com/auth/drive.file https://www.googleapis.com/auth/spreadsheets'
-            }).then(() => {
-                gapi.client.setToken({ access_token: token });
-                listFiles();
             });
+            gapi.client.setToken({ access_token: token });
+            listFiles();
         }
 
-        function listFiles() {
-            gapi.client.drive.files.list({
-                'pageSize': 10,
-                'fields': "nextPageToken, files(id, name)"
-            }).then(function(response) {
+        async function listFiles() {
+            try {
+                const response = await gapi.client.drive.files.list({
+                    'pageSize': 10,
+                    'fields': "nextPageToken, files(id, name)"
+                });
                 const files = response.result.files;
                 if (files && files.length > 0) {
                     let output = '<ul>';
@@ -150,9 +145,9 @@
                 } else {
                     document.getElementById('content').innerHTML = 'No files found.';
                 }
-            }, function(error) {
+            } catch (error) {
                 console.log('Error listing files: ', error);
-            });
+            }
         }
 
         function handleSignoutClick() {
@@ -197,7 +192,7 @@
 
             try {
                 console.log('Submitting data:', formData);
-                const response = await fetch('https://script.google.com/macros/s/AKfycbxzrduYbenMOSJRrVsO_w1Efn-dct26AX-Iew3u_tNq3hSMQ4nM-elFrZ5O3O2rYMkm/exec', {
+                const response = await fetch('https://script.google.com/macros/s/1YVFLVGMELKLY2JLlwRvXW-QnNP0_86ixl6qVhaBmjosO78ZITbdLv-aa/exec', {
                     redirect: 'follow',
                     method: 'POST',
                     headers: {
